storage/storage-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: storage
spec:
  type: ClusterIP
  ports:
  - name: HTTP
    port: 80
    protocol: TCP
    targetPort: 80
