storage/storage1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: storage1
spec:
  type: ClusterIP
  ports:
  - name: 
    port: 80
    protocol: TCP
    targetPort: 80
