storage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /storage
        pathType: Prefix
        backend:
          service:
            name: storage
            port:
              name: storage
              number: 80
